feat: add local stock and local sales
